--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -3,11 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MenuFragment">
+    tools:context=".fragments.MenuFragment">
 
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rec_categories"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/title_menu" />
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        tools:listitem="@layout/card_category" />
 
 </FrameLayout>
